# tamk-se-thesis

./: .clang-format  .dockerignore  .env.example  .gitignore  CMakeLists.txt  Cargo.toml  LICENSE  README.md  compose.yaml  flake.nix  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  rustfmt.toml
nix/: buck2.json  buck2.nix
projects/c-lib1/: BUCK  CMakeLists.txt
projects/c-lib1/src/c-lib1/: to-upper.c  to-upper.h
projects/c-lib1/src/thesis/c-lib1/: to-upper.c  to-upper.h
projects/cpp-app1/: BUCK  CMakeLists.txt
projects/cpp-app1/src/cpp-app1/: main.cpp  my-print.cpp  my-print.hpp
projects/cpp-app1/src/thesis/cpp-app1/: main.cpp  my-print.cpp  my-print.hpp
projects/cpp-app2/: BUCK  CMakeLists.txt
projects/cpp-app2/src/cpp-app2/: main.cpp
projects/cpp-app2/src/thesis/cpp-app2/: main.cpp
projects/cpp-app3/: BUCK  CMakeLists.txt
projects/cpp-app3/src/thesis/cpp-app3/: main.cpp
projects/cpp-lib1/: BUCK  CMakeLists.txt
projects/cpp-lib1/src/cpp-lib1/: append-to-upper.cpp  append-to-upper.hpp  to-upper-appender.hpp
projects/cpp-lib1/src/thesis/cpp-lib1/: append-to-upper.cpp  append-to-upper.hpp  to-upper-appender.hpp
projects/cpp-lib2/: BUCK  CMakeLists.txt  Cargo.toml  build.rs  package.json  pyproject.toml
projects/cpp-lib2/src/: js_build.sh  lib.rs
projects/cpp-lib2/src/cpp_lib2/: __init__.py
projects/cpp-lib2/src/thesis/: cpp-lib2.cpp  cpp-lib2.hpp  cpp-lib2.js.cpp  cpp-lib2.py.cpp
projects/cpp-lib2/tools/: bindgen_cli.rs
projects/js-app1/: Containerfile  index.html  package.json  vite.config.ts
projects/js-app1/src/: App.tsx
projects/js-app2/: .env.example  Containerfile  package.json
projects/js-app2/src/: index.ts
projects/js-lib1/: package.json
projects/js-lib1/src/: MyPyMessage.tsx  index.ts
projects/my-python-app/: main.py  pyproject.toml
projects/my-react-app/: package.json
projects/my-react-app/src/: App.tsx
projects/py-app1/: .env.example  Containerfile  package.json  pyproject.toml
projects/py-app1/app/: __init__.py  dependencies.py  main.py
projects/py-app1/app/internal/: admin.py
projects/py-app1/app/routers/: items.py  users.py
projects/py-app2/: main.py  pyproject.toml
projects/py-lib1/: pyproject.toml
projects/py-lib1/src/py_lib1/: __init__.py
projects/rust-app1/: BUCK  Cargo.toml
projects/rust-app1/src/: main.rs
projects/rust-lib1/: BUCK  CMakeLists.txt  Cargo.toml  build.rs  package.json  pyproject.toml
projects/rust-lib1/include/thesis/: rust-lib1.h  rust-lib1.hpp
projects/rust-lib1/src/: lib.rs  rust-lib1.hpp
projects/rust-lib1/src/rust_lib1/: __init__.py
projects/rust-lib1/tools/: cbindgen_cli.rs
projects/thesis/: BUCK  Cargo.toml
projects/thesis/src/: lib.rs
projects/thesisrs/: Cargo.toml
projects/thesisrs/src/: lib.rs
