cmake_minimum_required(VERSION 4.1)
project(thesis C CXX)

add_subdirectory(projects/cpp-app1)
add_subdirectory(projects/cpp-lib1)
add_subdirectory(projects/c-lib1)
add_subdirectory(projects/cpp-app2)
add_subdirectory(projects/rust-lib1)
add_subdirectory(projects/cpp-app3)
add_subdirectory(projects/cpp-lib2)
