[project]
name = "py-lib1"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [{ name = "Arif Basharyar", email = "saye.arif@gmail.com" }]
requires-python = ">=3.14"
dependencies = []

[build-system]
requires = ["uv_build>=0.9.28,<0.10.0"]
build-backend = "uv_build"
