[package]
name = "rust-lib1"
version.workspace = true
edition.workspace = true

[lib]
crate-type = ["cdylib", "staticlib", "rlib"]

[build-dependencies]
cbindgen.workspace = true

[dependencies]
console_error_panic_hook = { version = "0.1", optional = true }
wasm-bindgen = { version = "0.2", optional = true }

[features]
default = []
wasm = ["wasm-bindgen", "console_error_panic_hook"]
